# generic-classes

./: .gitignore  CMakeLists.txt  LICENSE  generic-classes.cpp  generic-classes.h
src/: Container.h  Math.h  define.h
src/Container/: Array.hpp  Array.inl
src/Containers/LinkedLists/: SinglyCircularLinkedList-tests.cpp  SinglyCircularLinkedList-tests.h  SinglyCircularLinkedList.hpp
src/Math/: Color.cpp  Color.h  Color.inl  Matrix.hpp  Matrix.inl  Matrix1x1.hpp  Matrix1x1.inl  Matrix2x2.hpp  Matrix2x2.inl  Matrix3x3.hpp  Matrix3x3.inl  Matrix4x4.hpp  Matrix4x4.inl  SquareMatrix.hpp  SquareMatrix.inl  Vector.hpp  Vector.inl  Vector1.hpp  Vector1.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vectors.h
src/Maths/: Matrix.hpp
tests/: Array.cpp  Colors.cpp  Matrices.cpp  Vectors.cpp
